applications/services/excalidraw/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: excalidraw
  labels:
    managed-by: argocd
