applications/services/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: excalidraw
  ports:
    - name: http
      port: 80
      targetPort: http
